--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -1,8 +1,13 @@
 .square{
     width:50px;
     height:50px;
-    background-color: aqua;
     border:1px solid black;
+}
+.square.water{
+    background-color: aqua;
+}
+.square.ship{
+    background-color: red;
 }
 
 .board{
